[package]
name = "string_concatenation_benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
concat-string = "1.0.1"
concat_strs = "1.0.2"
string_concat = "0.0.1"
concat-in-place = "1.1.0"
joinery = "3.1.0"

[[bench]]
name = "string_concat_benchmark"
harness = false